Fixed many small details. Changed HTML IDs to use '-' instead of '_'. Removed invisible div next to toolbar. Fixed diagonal fill outline. Fixed shortcut handling and added ESC keybinding. Made title a bit more kid-friendly.

--- a/css/main.css
+++ b/css/main.css
@@ -26,20 +26,8 @@ html, body {
   top: 0;
 }
 
-.overlay.mode_MOVE {
-  cursor: move;
-}
-
-.overlay.mode_BOX,
-.overlay.mode_DIAG,
-.overlay.mode_SELECT {
-  cursor: pointer;
-}
-
 canvas {
   position: absolute;
   top: 0;
   left: 0;
 }
-
-
